--- a/battlefield-3-aimbot/index.html
+++ b/battlefield-3-aimbot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Battlefield-3-Aimbot v3.2.7 - Free Download</title>
+    <title>Battlefield 3 Aimbot v3.2.7 - Free Download</title>
     <meta name="description" content="Download the best free Battlefield 3 Aimbot. Dominate every match with perfect aim, ESP, and more. 100% free and undetected.">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
